show icons for each row

--- a/app/styles/turn-order.less
+++ b/app/styles/turn-order.less
@@ -4,6 +4,12 @@
     .list-group {
         height: 200px;
         overflow: auto;
+
+        .list-group-item {
+            .icon {
+                width: 35px;
+            }
+        }
     }
 
     .panel-footer {
