--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,4 +1,7 @@
-
-{{turn-order model=model}}
-
-{{outlet}}
+<div class="container-fluid">
+    {{#if gameLoaded}}
+        game loaded
+    {{else}}
+        {{load-menu load="loadGame" new="newGame"}}
+    {{/if}}
+</div>
