fire new game action and kill button outline when clicked

--- a/app/templates/components/load-menu.hbs
+++ b/app/templates/components/load-menu.hbs
@@ -1,6 +1,6 @@
 <div class="load-menu row fill-viewport">
     <div class="col-md-6 fill-viewport">
-        <button class="new-game btn btn-primary">
+        <button class="new-game btn btn-primary" {{action "newGameClicked"}}>
             New Game
         </button>
     </div>
