--- a/app/templates/components/load-menu.hbs
+++ b/app/templates/components/load-menu.hbs
@@ -5,12 +5,14 @@
         </button>
     </div>
     <div class="col-md-6">
-        <div class="panel panel-default">
+        <div class="panel panel-info">
             <div class="panel-heading">
                 <h3 class="panel-title">Load Game</h3>
             </div>
-            <div class="panel-body">
-                Game list
+            <div class="list-group">
+                {{#each game in gameList}}
+                    <a href="#" class="list-group-item" {{action "gameListItemClicked" game}}>{{game.name}}</a>
+                {{/each}}
             </div>
         </div>
     </div>
