better menu style

--- a/app/styles/load-menu.less
+++ b/app/styles/load-menu.less
@@ -4,9 +4,10 @@
 
     .new-game {
         width: 100%;
-        font-size: 4em;
-        border-radius: 60px;
+        font-size: 2em;
+//        border-radius: 60px;
         outline: none !important;
+        margin-bottom: 15px;
     }
 }
 
