--- a/app/templates/components/load-menu.hbs
+++ b/app/templates/components/load-menu.hbs
@@ -1,10 +1,9 @@
 <div class="load-menu row fill-viewport">
-    <div class="col-md-6 fill-viewport">
+    <div class="col-md-offset-3 col-md-6 fill-viewport">
         <button class="new-game btn btn-primary" {{action "newGameClicked"}}>
             New Game
         </button>
-    </div>
-    <div class="col-md-6">
+
         <div class="panel panel-info">
             <div class="panel-heading">
                 <h3 class="panel-title">Load Game</h3>
