simplify game creation layout

--- a/app/templates/components/load-menu.hbs
+++ b/app/templates/components/load-menu.hbs
@@ -1,12 +1,20 @@
 <div class="load-menu row fill-viewport">
     <div class="col-md-offset-3 col-md-6 fill-viewport">
-        <button class="new-game btn btn-primary" {{action "newGameClicked"}}>
-            New Game
-        </button>
-
         <div class="panel panel-info">
             <div class="panel-heading">
-                <h3 class="panel-title">Load Game</h3>
+                <h3 class="panel-title">Saved Games</h3>
+            </div>
+            <div class="panel-body">
+                <form class="form-inline" {{action "newGameForm" on="submit"}}>
+                    <div class="form-group">
+                        {{input type="text" placeholder="your name" class="form-control"}}
+                    </div>
+                    <div class="form-group">
+                        <button type="submit" class="btn btn-primary">
+                            New Game
+                        </button>
+                    </div>
+                </form>
             </div>
             <div class="list-group">
                 {{#each game in gameList}}
