Create save files from load form

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,7 +1,1 @@
-<div class="container-fluid">
-    {{#if gameLoaded}}
-        game loaded
-    {{else}}
-        {{load-menu load="loadGame" new="newGame"}}
-    {{/if}}
-</div>
+{{outlet}}
