--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
     <title>Adventure Battle</title>
+
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}">
 </head>
 <body>
     Helloooooo There Seattle!
