--- a/server/static/styles.css
+++ b/server/static/styles.css
@@ -3,4 +3,29 @@ html, body {
     padding: 0;
     background-color: #f5f5f5;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    height: 100%;
+    width: 100%;
+    vertical-align: middle;
+}
+
+.container {
+    position: absolute;
+    display: table;
+    height: 100%;
+    width: 100%;
+}
+
+.alignment {
+    display: table-cell;
+    vertical-align: middle;
+}
+
+.viewport {
+    margin-left: auto;
+    margin-right: auto;
+
+    width: 1024px;
+    height: 576px;
+
+    background-color: #000000;
 }
