--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -6,6 +6,14 @@
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}">
 </head>
 <body>
-    Helloooooo There Seattle!
+
+<div class="container">
+    <div class="alignment">
+        <div class="viewport">
+        </div>
+    </div>
+</div>
+
+<script type="text/javascript" src="{{ url_for('static', filename='app.js') }}"></script>
 </body>
 </html>
