--- a/server/static/styles.css
+++ b/server/static/styles.css
@@ -1,7 +1,7 @@
 html, body {
     margin: 0;
     padding: 0;
-    background-color: #f5f5f5;
+    background-color: #272727;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     height: 100%;
     width: 100%;
@@ -23,9 +23,9 @@ html, body {
 .viewport {
     margin-left: auto;
     margin-right: auto;
-
     width: 1024px;
     height: 576px;
-
-    background-color: #000000;
+    background-color: #f5f5f5;
+    border-radius: 6px;
+    box-shadow: inset 0px 0px 20px 0px #272727;
 }
