--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -15,6 +15,7 @@
 </div>
 
 <script type="text/javascript" src="{{ url_for('static', filename='lib/jquery-2.1.1.js') }}"></script>
+<script type="text/javascript" src="{{ url_for('static', filename='lib/rsvp-3.0.13.js') }}"></script>
 <script type="text/javascript" src="{{ url_for('static', filename='app.js') }}"></script>
 
 <script>
