use a viewport reference so we don't have to look up the viewport every time we need it

--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -20,7 +20,7 @@
 
 <script>
     $(function () {
-        var game = new AdventureBattle();
+        var game = new AdventureBattle($('viewport'));
         game.start();
     });
 </script>
