--- a/server/static/styles.css
+++ b/server/static/styles.css
@@ -29,3 +29,34 @@ html, body {
     border-radius: 6px;
     box-shadow: inset 0px 0px 20px 0px #272727;
 }
+
+.login-modal {
+    width: 250px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 20%;
+}
+
+.login-modal #loginForm {
+    display: block;
+    background-color: #ddd;
+    padding: 20px;
+    border-radius: 10px;
+    border: 3px solid #888;
+}
+
+.login-modal #loginForm > input {
+    width: 95%;
+    padding: 10px 0 10px 10px;
+    border-radius: 4px;
+    border: none;
+    margin-bottom: 5px;
+}
+
+.login-modal #loginForm > button {
+    padding: 10px;
+    background-color: white;
+    border: 1px solid black;
+    border-radius: 5px;
+    margin: 15px 0 0 75%;
+}
