--- a/server/static/styles.css
+++ b/server/static/styles.css
@@ -34,29 +34,41 @@ html, body {
     width: 250px;
     margin-left: auto;
     margin-right: auto;
-    padding-top: 20%;
+    padding-top: 10%;
 }
 
 .login-modal #loginForm {
     display: block;
-    background-color: #ddd;
+    background-color: #f9f9f9;
     padding: 20px;
-    border-radius: 10px;
-    border: 3px solid #888;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    box-shadow: 0px 0px 30px 5px #ccc;
 }
 
 .login-modal #loginForm > input {
     width: 95%;
     padding: 10px 0 10px 10px;
     border-radius: 4px;
-    border: none;
+    border: 1px solid #ccc;
     margin-bottom: 5px;
+    font-size: 14px;
 }
 
 .login-modal #loginForm > button {
-    padding: 10px;
-    background-color: white;
-    border: 1px solid black;
+    padding: 6px 12px;
     border-radius: 5px;
-    margin: 15px 0 0 75%;
+    margin: 15px 0 0 0;
+    font-size: 14px;
+    cursor: pointer;
+    color: #fff;
+    background-color: #428bca;
+    border: 1px solid #357ebd;
+}
+
+.login-modal #loginForm > button:hover {
+    color: #fff;
+    background-color: #3071a9;
+    border-color: #285e8e;
+    text-decoration: none;
 }
