--- a/server/static/styles.css
+++ b/server/static/styles.css
@@ -37,7 +37,7 @@ html, body {
     padding-top: 10%;
 }
 
-.login-modal #loginForm {
+#loginForm {
     display: block;
     background-color: #f9f9f9;
     padding: 20px;
@@ -46,7 +46,7 @@ html, body {
     box-shadow: 0px 0px 30px 5px #ccc;
 }
 
-.login-modal #loginForm > input {
+#loginForm > input {
     width: 95%;
     padding: 10px 0 10px 10px;
     border-radius: 4px;
@@ -55,7 +55,7 @@ html, body {
     font-size: 14px;
 }
 
-.login-modal #loginForm > button {
+#loginForm > button {
     padding: 6px 12px;
     border-radius: 5px;
     margin: 15px 0 0 0;
@@ -66,9 +66,21 @@ html, body {
     border: 1px solid #357ebd;
 }
 
-.login-modal #loginForm > button:hover {
+#loginForm > button:hover {
     color: #fff;
     background-color: #3071a9;
     border-color: #285e8e;
     text-decoration: none;
+}
+
+#loginError {
+    display: none;
+    font-weight: 700;
+    color: #a94442;
+    margin-bottom: 10px;
+    text-align: center;
+}
+
+#loginError.visible {
+    display: block;
 }
