--- a/server/static/styles.css
+++ b/server/static/styles.css
@@ -30,7 +30,7 @@ html, body {
     box-shadow: inset 0px 0px 20px 0px #272727;
 }
 
-.login-modal {
+.auth-modal {
     width: 250px;
     margin-left: auto;
     margin-right: auto;
