add socket.io to the client

--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -14,6 +14,7 @@
     </div>
 </div>
 
+<script type="text/javascript" src="{{ url_for('static', filename='lib/socket.io.js') }}"></script>
 <script type="text/javascript" src="{{ url_for('static', filename='lib/jquery-2.1.1.js') }}"></script>
 <script type="text/javascript" src="{{ url_for('static', filename='lib/rsvp-3.0.13.js') }}"></script>
 <script type="text/javascript" src="{{ url_for('static', filename='app.js') }}"></script>
