attempt to see socketio events bouncing back and forth ... failure

--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -21,7 +21,7 @@
 
 <script>
     $(function () {
-        var game = new AdventureBattle($('.viewport'));
+        window.game = new AdventureBattle($('.viewport'));
         game.start();
     });
 </script>
